...
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="381dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/x_nof"
            android:contentDescription="@string/logo" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="363dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
...
