<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backdef"
    tools:context=".GameStart">

    <Button
        android:id="@+id/startGame"
        android:layout_width="@dimen/gameStartButtonWidthStartGame"
        android:layout_height="@dimen/gameStartButtonHeightStartGame"
        android:layout_marginBottom="@dimen/gameStartMarginStartGame"
        android:layout_marginEnd="@dimen/gameStartMarginStartGame"
        android:layout_marginStart="@dimen/gameStartMarginStartGame"
        android:layout_marginTop="@dimen/gameStartMarginStartGame"
        android:background="@drawable/bot"
        android:onClick="onClickStartGame"
        android:text="@string/startGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <EditText
        android:id="@+id/firstPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textEditMarginBottomFirst"
        android:layout_marginEnd="@dimen/textEditMargin"
        android:layout_marginStart="@dimen/textEditMargin"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/startGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secondPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/textEditMarginBottomSecond"
        android:layout_marginEnd="@dimen/textEditMargin"
        android:layout_marginStart="@dimen/textEditMargin"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/startGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>