<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/fon"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fon" />

    <Button
        android:id="@+id/newGame"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="150dp"
        app:layout_constraintStart_toStartOf="@id/fon"
        app:layout_constraintTop_toTopOf="@id/fon" />

    <Button
        android:id="@+id/rules"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="@id/fon"
        app:layout_constraintTop_toTopOf="@id/fon" />

    <Button
        android:id="@+id/quit"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="@id/fon"
        app:layout_constraintTop_toTopOf="@id/fon" />

</android.support.constraint.ConstraintLayout>