...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text=""/>
    <TextView
        android:id="@+id/title"
        android:textColor="#7d20f5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/winerName"
...
    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="#7d20f5"
        android:textColor="#ffffff"
        android:text="@string/menu"
        android:textSize="30sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
