<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rules"
        android:layout_width="150dp"
...
