<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/ic_folder"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_folder_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />

        <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="#НАЗВАНИЕ_ПАПКИ_1"
                android:textColor="@android:color/black"
                app:layout_constraintStart_toEndOf="@id/ic_folder"
                app:layout_constraintTop_toTopOf="@id/ic_folder"
                app:layout_constraintBottom_toBottomOf="@id/ic_folder"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>