<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/settings_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headline_rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/headline_rules"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#d30818"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/rules_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rules_text"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:lineSpacingMultiplier="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_rules"
        />

</android.support.constraint.ConstraintLayout>